[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/kenney_future_64.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/kenney_future_narrow_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/screens/ResultMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/sfx/sfx_sounds_fanfare1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sfx/sfx_menu_select3.wav" type="AudioStream" id=5]

[node name="ResultMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://src/levels/Level01.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.392157, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 710.0
custom_constants/separation = 100
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 1260.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 1 )
text = "Result"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 462.0
margin_top = 316.0
margin_right = 797.0
margin_bottom = 413.0
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="TimeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 335.0
margin_bottom = 36.0
custom_constants/separation = 60

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/TimeContainer"]
margin_right = 206.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "Total Time:"

[node name="TimeValue" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/TimeContainer"]
margin_left = 266.0
margin_right = 335.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "asd"

[node name="ScoreContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 335.0
margin_bottom = 97.0
custom_constants/separation = 25

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/ScoreContainer"]
margin_right = 241.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "Total Score:"

[node name="ScoreValue" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/ScoreContainer"]
margin_left = 266.0
margin_right = 335.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "asd"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 547.0
margin_top = 513.0
margin_right = 712.0
margin_bottom = 555.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Restart"

[node name="ResultSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="RestartSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
